[project]
name = "simloop"
version = "0.1.0"
description = "Deterministic simulation testing for Python asyncio: seeded scheduling, virtual time, replayable failures"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dhruv Kumar Singh", email = "singhdhruvk@gmail.com" }]
keywords = ["asyncio", "testing", "deterministic", "simulation", "dst"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/dhruvl/simloop"
Repository = "https://github.com/dhruvl/simloop"
Issues = "https://github.com/dhruvl/simloop/issues"

[dependency-groups]
dev = ["pytest>=8", "mypy>=1.11"]

[project.entry-points.pytest11]
simloop = "simloop._pytest_plugin"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests", "examples/jobqueue/tests"]
addopts = "-m 'not slow'"
markers = ["slow: long-running seed sweeps and replay-stability checks"]

[tool.mypy]
strict = true
files = ["src", "tests", "benchmarks", "examples/jobqueue"]
mypy_path = "examples/jobqueue"

[tool.hatch.build.targets.sdist]
only-include = ["src/simloop"]

[tool.hatch.build.targets.wheel]
packages = ["src/simloop"]
